fix hero on ios
close #1

--- a/_sass/oneflow/_page.scss
+++ b/_sass/oneflow/_page.scss
@@ -2,6 +2,7 @@
    PAGE
    ========================================================================== */
 
+
 #main {
   @include clearfix;
   margin-left: auto;
@@ -284,4 +285,33 @@ text-align: center;
     background-repeat: repeat-y;
     background-attachment: scroll;
   }
+}
+
+
+
+
+
+
+
+
+
+
+.page__hero--overlay {
+    background-image: radial-gradient(circle at center, #fbf6e8 65%, rgba(251, 246, 232, 0) 85%),
+                    linear-gradient(to right, rgba(53, 219, 160, 0.7), rgba(70, 119, 225, 0.7));
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .page__hero--overlay {
+        background-image: radial-gradient(circle at center, #fbf6e8 65%, rgba(251, 246, 232, 0) 85%),
+                        linear-gradient(to right, rgba(53, 219, 160, 0.7), rgba(70, 119, 225, 0.7));
+        background-attachment: scroll;
+    }
 }
